More codec utils, serialization fixes, particle effect refactor, deferrer fix